# rust-project-cheat

actix-webserver/: Cargo.toml
actix-webserver/src/: error.rs
actix-webserver/src/controllers/v1/: user_controller.rs
actix-webserver/src/model/: user_model.rs
actix-webserver/src/routes/: mod.rs  v1.rs
amquip-consumer/: Cargo.toml
amquip-consumer/src/: main.rs
amquip-producer/: Cargo.toml
amquip-producer/src/: main.rs
connect-mariadb/: Cargo.toml
connect-mariadb/src/: main.rs
lapin-mq/: Cargo.toml
lapin-mq/src/: main.rs
lapin-mq/src/service/: consumer.rs
lru-cache/: Cargo.toml
lru-cache/src/: main.rs
lru-cache/src/service/: mod.rs
module_rust/src/: main.rs
module_rust/src/foo/: bar.rs  mod.rs
module_rust/src/foo/bazz/: mod.rs
rust-hashmap/: Cargo.toml
rust-hashmap/src/: main.rs  service.rs
tokio-async/src/: main.rs
understanding-struct/: Cargo.toml
understanding-struct/src/: main.rs
understanding-struct/src/person/: mod.rs  person.rs
warp-webserver/: Cargo.toml
warp-webserver/src/: main.rs
warp-webserver/src/controller/: store_controller.rs
warp-webserver/src/model/: mod.rs  struct_model.rs
warp-websocket/: Cargo.toml
warp-websocket/src/: main.rs
webserver/: Cargo.toml
webserver/src/: error.rs  main.rs
webserver/src/controllers/: mod.rs
webserver/src/controllers/v1/: user_controller.rs
webserver/src/model/: user_model.rs
webserver/src/routes/: v1.rs
