[package]
name = "lapin-mq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.1.1"
tracing = "0.1.36"
futures-lite = "1.12.0"
async-global-executor = "2.2.0"
tracing-subscriber = "0.3.15"
json = "0.12.4"