[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-rt = "2.7.0"
listenfd = "1.0.0"
mime = "0.3.16"
lazy_static = "1.4.0"
tera = "1.16.0"
serde =  { version = "1.0.142", features = ["derive"] }
serde_json = { version = "1.0"}
derive_more = "0.99.2"
thiserror = "1.0.32"
